--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </header>
     </div>
     <ul class="shuffle">
-        <img src="images/home-meal.png" width="500px" height="280px">
-        <img src="images/homepage_banner.jpg" width="700px" height="280px">
-        <img src="images/Homepagebakery.jpg" width="500px" height="280px">
+        <img src="images/home-meal.png" width="470px" height="250px">
+        <img src="images/homepage_banner.jpg" width="670px" height="250px">
+        <img src="images/Homepagebakery.jpg" width="470px" height="250px">
     </ul>
     <p id="quote"> 
         <h3>Today's Quote</h3>
@@ -34,12 +34,12 @@
 
     <!--page 2-->
     <div class="page2">
-        <h2>Our Menu</h2>
+        <h2 class="ourmenu">Our Menu</h2>
         <p id="menust">
             Order in from our Caffe delivery menu and enjoy happiness at home- made fresh, delivered fast.
             Using only the highest quality ingredients, Dormans creates delicious variety of fresh meals from wholesome dinners to cheat treats, vegeterian and vegan dishes to comforting food, and longtime favorites to tandalizing new dishes. 
         </p>
-        <img src="images/menu.png" id="menu" width="550px" height="300px">
+        <img class="menupic" src="images/menu.png" id="menu" width="550px" height="300px">
         <p>
         Here are ome of our dishes for in-sit or delivery.
             <table>
