--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
     </nav>
     </header>
     </div>
-    <ul class="shuffle">
+    <marquee behavior="slide">
         <img src="images/home-meal.png" width="470px" height="250px">
         <img src="images/homepage_banner.jpg" width="670px" height="250px">
         <img src="images/Homepagebakery.jpg" width="470px" height="250px">
-    </ul>
+        <img src="images/resized2.png" width="400px" height="260px">
+    </marquee>
     <p id="quote"> 
+        <marquee>
         <h3>Today's Quote</h3>
         I'm looking for somethin more than coffee but less than cocaine.
     </p>
+        </marquee>
 
     <!--page 2-->
     <div class="page2">
